--- a/src/main/resources/templates/factura/js/autocomplete-productos.html
+++ b/src/main/resources/templates/factura/js/autocomplete-productos.html
@@ -1,18 +1,18 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
     <body>
         <script type="text/javascript" th:fragment="javascript">
-            
-            $(document).ready(function(){
+
+            $(document).ready(function () {
                 $("#buscar_producto").autocomplete({
-                    source: function(request, response){
+                    source: function (request, response) {
                         $.ajax({
-                            url:"/factura/cargar-productos/" + request.term,
+                            url: "/factura/cargar-productos/" + request.term,
                             dataType: "json",
                             data: {
                                 term: request.term
                             },
-                            success: function(data){
-                                response($map(data, function(item){
+                            success: function (data) {
+                                response($.map(data, function (item) {
                                     return{
                                         value: item.id,
                                         label: item.nombre,
@@ -20,17 +20,21 @@
                                     };
                                 }));
                             },
-                            select: function(event, ui){
-                                $("#buscar_producto").val(ui.item.label);
-                                
-                                return false;
-                            }
                         });
-                    }
+                    },
+                    select: function (event, ui) {
+                        $("#buscar_producto").val(ui.item.label);
+
+                        return false;
+                    },
+                    focus: function (event, ui) {
+                        event.preventDefault();
+                        $('input[name="buscar_producto"]').val(ui.item.label);
+                    },
                 });
-            }  
+            }
             );
-            
+
         </script>
     </body>
 </html>
